# joanir_project

./: .gitignore  config.py  pyproject.toml  settings.yaml
src/domain/editors/entities/: user_entity.py
src/domain/editors/interfaces/: editors_repository_interface.py  editors_request.py
src/domain/editors/services/: editors_services.py
src/framework/: app.py
src/framework/admin/: auth.py
src/framework/blueprints/: __init__.py
src/framework/blueprints/web/: home_controller.py
src/framework/ext/: flask_admin.py  flask_migrate.py  flask_simple_login.py  flask_sqlalchemy.py
src/framework/models/: users.py
src/framework/templates/: index.html
tests/: conftest.py
tests/adapters/requests/: editors_request_test.py
tests/unit/domain/editors/entities/: test_user_entity.py
tests/unit/domain/editors/interfaces/: test_editors_repository_interface.py  test_editors_request_interface.py
tests/unit/domain/editors/services/: test_editors_service.py
tests/unit/framework/: test_app.py
