[tool.poetry]
name = "joanir-project"
version = "0.1.0"
description = ""
authors = ["jacksonsr45 <jackson.severino.rocha@escola.pr.gov.br>"]
readme = "README.md"
packages = [{include = "src"}]

exclude = ["tests", "docs"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-Admin = "^1.6.0"
dynaconf = "^3.1.11"
python-dotenv = "^0.21.0"
flask-sqlalchemy = "^3.0.1"
Flask-Migrate = "^3.1.0"
flask-simple-login = "^0.0.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
blue = "^0.9.1"
coverage = "^6.5.0"
mkdocs = "^1.4.0"
pytest = "^7.1.3"
pytest-flask = "^1.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
